Use exactly 1em marker margin for list-style:inside items

Fix the interop issue for list-style:inside items. W3C spec
http://www.w3.org/TR/css3-lists/#ua-stylesheet recommends 1em margin for
markers. Unlike other browsers (verified with Edge and Firefox)
Chrome does not follow UA stylesheet recommendation.

The fix is temporarily landed in LayoutListMarker.cpp. Default UA CSS
should be moved to WebKit/Source/core/css/html.css after
crbug.com/457718 is fixed.

BUG=644630

Review-Url: https://codereview.chromium.org/2748473003
Cr-Commit-Position: refs/heads/master@{#457059}