third_party/WebKit/Source/core/layout/LayoutListMarker.cpp
@@ -296,7 +296,6 @@ void LayoutListMarker::updateMargins() {
         case ListStyleCategory::Symbol:
           marginStart = LayoutUnit(-1);
           marginEnd =
-              fontMetrics.ascent() - minPreferredLogicalWidth() + 1 +
               LayoutUnit(cUAMarkerMarginEm * style()->computedFontSize());
           break;
         default:
